# ros_alate

./: CMakeLists.txt  README.md  package.xml
doc/uml/: class_adapter.mp  class_nemala.mp  class_ros2.mp  component_adapter.mp
docker/: humble
include/ros_alate/: adapter.h
param/: adapter.yaml
src/: adapter.cpp  ros_alate_adapter.cpp
